--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,11 @@
-.App {
-  text-align: center;
+
+h1 {
+  font-size: 2.9vw !important;
 }
 
-
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+table {
+  width: 80%;
 }
 
-.App-link {
-  color: #61dafb;
-}
+/* auto!important */
 
